[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xploit-scanner"
version = "1.0.0"
description = "CLI web vulnerability scanner for authorized security assessment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Harsh Zagade" },
]
keywords = [
  "security",
  "web-security",
  "vulnerability-scanner",
  "cli",
  "penetration-testing",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = [
  "beautifulsoup4>=4.12.0",
  "requests>=2.31.0",
]

[project.scripts]
xploit = "xploit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xploit*"]
